fixed issues with elements not aligning when teh screen was narrower than 960px

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     width: 50%;
     height: 100vh;
     display: flex;
+    background-color: #0f0;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -84,15 +85,35 @@ body {
     #clock {
         margin-top: 1em;
     }
+
+    .weather-container {
+      flex-direction: column;
+      width: 100%;
+    }
+
     .container > .bookmark-container {
         flex-direction: column;
-        width: 60%;
+        width: 100%;
     }
-    .bookmark-container > .bookmark-set {
+
+    .bookmark-container > .bookmark-set-inside {
         width: auto;
-        margin: 0em 0em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        margin-left: 0em;
+        margin-right: 0em;
+    }
+
+    .bookmark-container > .bookmark-set-outside {
+        width: auto;
+        margin-top: 0em;
+        margin-bottom: 0em;
+        margin-left: 0em;
+        margin-right: 0em;
     }
 }
+
+
 
 .bookmark-set-outside{
     padding: 1em;
@@ -100,7 +121,7 @@ body {
     border-radius: 3px;
     font-family: "Roboto Mono";
     font-size: .85rem;
-    width: 120%;
+    width: 100%;
     height: 10em;
     margin: 0em 0em;
 }
@@ -111,9 +132,10 @@ body {
     border-radius: 3px;
     font-family: "Roboto Mono";
     font-size: .85rem;
-    width: 120%;
+    width: 100%;
     height: 10em;
-    margin: 0em 1em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .bookmark-inner-container {
